--- a/.env
+++ b/.env
@@ -32,3 +32,15 @@ APP_SECRET=8c663f65af18329272564fa27130907a
 DATABASE_URL="mysql://root:@localhost:3306/sahti"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://noreplysahti@gmail.com:rwtlwppcxycwhwfa@default
+###< symfony/google-mailer ###
